Fix definition button alignment

--- a/webapp/nationalDataEntry/style.less
+++ b/webapp/nationalDataEntry/style.less
@@ -39,14 +39,15 @@
 .nde__data-table-header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding-bottom: 16px;
-
-  .subhead {
-    flex-grow: 1;
-  }
 
   > *:nth-child(n + 2) {
     margin-left: 16px;
+  }
+
+  > *:last-child {
+    margin-left: auto;
   }
 }
 
